--- a/style.css
+++ b/style.css
@@ -40,3 +40,48 @@ animation: colorMove 3s infinite alternate;
         background-position:100% 50%;
     }
 }
+.main-container{
+    width: 90%;
+    max-width: 900px;
+    /* height: 750px; */
+    border: 3px solid black;
+    margin: 40 auto;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 10px;
+}
+.box{
+background: linear-gradient(145deg, #ffffff, #f3f7fb);
+  border: 2px solid #cfd9e3;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
+  height: 230px; /* same height as pricing plans */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
+.box:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
+  border-color: #5b9df9;
+}
+.box:nth-child(1){
+    grid-column: span 3;
+}
+.box:nth-child(2),
+.box:nth-child(3){
+    grid-column: span 2;
+}
+
+.box:nth-child(3),
+.box:nth-child(4),
+.box:nth-child(5),
+.box:nth-child(6){
+    grid-column: span 1;
+}
