--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ animation: colorMove 3s infinite alternate;
     max-width: 900px;
     /* height: 750px; */
     border: 3px solid black;
-    margin: 40 auto;
+    margin: 40;
     /* display: flex; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -53,23 +53,18 @@ animation: colorMove 3s infinite alternate;
     padding: 10px;
 }
 .box{
-background: linear-gradient(145deg, #ffffff, #f3f7fb);
-  border: 2px solid #cfd9e3;
-  border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
-  height: 230px; /* same height as pricing plans */
+  background: white;
+  border: 2px solid #222;
+  border-radius: 10px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.2rem;
-  font-weight: 600;
-  transition: all 0.4s ease;
-  cursor: pointer;
+  font-weight: bold;
+  transition: transform 0.3s;
 }
 .box:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
-  border-color: #5b9df9;
+  transform: scale(1.05);
 }
 .box:nth-child(1){
     grid-column: span 3;
