--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ img:hover {
 
 .box {
     width: 350px;
-    min-height:600px;
+    min-height: 600px;
     border: 2px solid red;
     border-radius: 10px;
     margin: 10px;
@@ -92,7 +92,53 @@ img:hover {
 .box:nth-child(6) {
     grid-area: box6;
 }
-/* box  h1 */
-.box h1{
-   margin: 10px  0  0 10px; 
+
+.box i {
+    font-size: 28px;
+    margin: 0 0 0 5px;
+    cursor: pointer;
+    transition: transform 0.5s ease-in;
+}
+
+.box i:hover {
+    transform: scale(1.3);
+    filter: drop-shadow(0 0 8px currentColor)
+}
+
+/* Individual icon colors */
+/* ------------------------ */
+
+.box:nth-child(1) i {
+    /* Starter */
+    color: #10B981;
+}
+
+.box:nth-child(2) i {
+    /* Advanced */
+    color: #3B82F6;
+    margin: 9px;
+}
+
+
+.box:nth-child(3) i {
+    /* Business */
+    color: #8B5CF6;
+}
+
+
+.box:nth-child(4) i {
+    /* Pro */
+    color: #F59E0B;
+}
+
+
+.box:nth-child(5) i {
+    /* Developer */
+    color: #FACC15;
+}
+
+
+.box:nth-child(6) i {
+    /* Enterprise */
+    color: #EF4444;
 }
