--- a/style.css
+++ b/style.css
@@ -221,3 +221,20 @@ span{
   opacity: 0.9;
 }
 
+/* Success Popup  */
+.popup{
+    position: fixed;
+    top:20px;
+    /* right: -300px; */
+    background: #0abf30;
+  color: white;
+  padding:14px 24px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  gap:10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+transition: right 0.6s  ease;
+font-size: 18px;
+z-index: 1000;
+}
