--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ span{
 .popup{
     position: fixed;
     top:20px;
-    /* right: -300px; */
+    right: -300px;
     background: #0abf30;
   color: white;
   padding:14px 24px;
@@ -237,4 +237,13 @@ span{
 transition: right 0.6s  ease;
 font-size: 18px;
 z-index: 1000;
+}
+.popup .show{
+    right : 20px;
+}
+.popup-content i p {
+    display: inline-block;
+}
+.popup i{
+    font-size: 22px;
 }
