--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ img:hover {
 }
 
 .box i:hover {
-    transform: scale(1.3);
+    transform: scale(1.3) rotate(360deg);
     filter: drop-shadow(0 0 8px currentColor)  
 }
 
@@ -238,12 +238,18 @@ transition: right 0.6s  ease;
 font-size: 18px;
 z-index: 1000;
 }
-.popup .show{
+.popup.show{
     right : 20px;
-}
-.popup-content i p {
-    display: inline-block;
 }
 .popup i{
     font-size: 22px;
+}
+.popup-content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.popup-content p {
+    margin: 0;             /* remove extra margin */
+    font-weight: bold;
 }
