updated content info

--- a/style.css
+++ b/style.css
@@ -254,6 +254,12 @@ z-index: 1000;
     font-weight: bold;
 }
 
+/* ============= */
+
+
+
+
+/* =====.social-links ==== */
 
 .social-links {
   text-align: center;
@@ -349,3 +355,4 @@ z-index: 1000;
   color: #003366;
   text-shadow: 0 0 3px rgba(0, 102, 204, 0.4);
 }
+
