--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 body {
     /* background: rgb(208, 242, 244); */
-    /* background: #000; */
+    background: #3b3a3a;
+    color: #ffff;
 }
 
 .txt-img {
@@ -94,14 +95,14 @@ img:hover {
     grid-area: box6;
 }
 
-.box i {
+.price-info i {
     font-size: 28px;
     margin: 0 0 0 5px;
     cursor: pointer;
     transition: transform 0.5s ease-in;
 }
 
-.box i:hover {
+.price-info i:hover {
     transform: scale(1.3) rotate(360deg);
     filter: drop-shadow(0 0 8px currentColor)  
 }
@@ -254,10 +255,16 @@ z-index: 1000;
     font-weight: bold;
 }
 
-/* ============= */
+/* ========content-info===== */
+.content-info i{
+    font-size: 25px;
+    margin:  4px 10px ;
+}
 
-
-
+.content-info p:hover{
+    color:cyan;
+    cursor: pointer;
+}
 
 /* =====.social-links ==== */
 
