--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,25 @@
+@media screen and (max-width:430px) {
+   .txt-img{
+    flex-direction: column-reverse;
+    text-align: center;
+   }
+   .txt h1{
+    font-size: 25px;
+    margin-top: 20px;
+   }
+    .txt-img .img img {
+    height: 120px;
+    margin-top: 20px;
+  }
+   /* .img img{
+    margin-bottom: 20px;
+   } */
+.box{
+  width: 90%;
+   /* height: auto; */
+}
+}
+
 
 @media (max-width: 600px) {
   .subject-row {
