--- a/responsive.css
+++ b/responsive.css
@@ -1,23 +1,31 @@
 @media screen and (max-width:430px) {
-   .txt-img{
+  .txt-img {
     flex-direction: column-reverse;
     text-align: center;
-   }
-   .txt h1{
+  }
+
+  .txt h1 {
     font-size: 25px;
     margin-top: 20px;
-   }
-    .txt-img .img img {
+  }
+
+  .txt-img .img img {
     height: 120px;
     margin-top: 20px;
   }
-   /* .img img{
-    margin-bottom: 20px;
-   } */
-.box{
-  width: 90%;
-   /* height: auto; */
-}
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+    /* .price-info h1 {
+    font-size: 20px;
+  } */
+
+  .content-info p {
+    font-size: 14px;
+  }
 }
 
 
@@ -39,7 +47,8 @@
 
   .links {
     flex-direction: column;
+    /* align-items: center; */
   }
 
- 
+
 }
