--- a/responsive.css
+++ b/responsive.css
@@ -28,7 +28,7 @@
   }
 }
 
-
+/* 
 @media (max-width: 600px) {
   .subject-row {
     flex-direction: column;
@@ -47,8 +47,6 @@
 
   .links {
     flex-direction: column;
-    /* align-items: center; */
-  }
-
-
-}
+    /* align-items: center; 
+    
+/ } }
